--- a/01_FE/package.json
+++ b/01_FE/package.json
@@ -13,6 +13,8 @@
     "@fortawesome/fontawesome-svg-core": "^6.6.0",
     "@fortawesome/free-solid-svg-icons": "^6.6.0",
     "@fortawesome/vue-fontawesome": "^3.0.0-5",
+    "axios": "^1.7.7",
+    "pinia": "^2.2.4",
     "vue": "^3.4.29",
     "vue-router": "^4.3.3"
   },
