--- a/02_BE/chat-realtime/docker-compose.yml
+++ b/02_BE/chat-realtime/docker-compose.yml
@@ -1,44 +1,33 @@
-# services:
-#   mysql_bp:
-#     image: mysql:latest
-#     restart: unless-stopped
-#     environment:
-#       MYSQL_DATABASE: ${BLUEPRINT_DB_DATABASE}
-#       MYSQL_USER: ${BLUEPRINT_DB_USERNAME}
-#       MYSQL_PASSWORD: ${BLUEPRINT_DB_PASSWORD}
-#       MYSQL_ROOT_PASSWORD: ${BLUEPRINT_DB_ROOT_PASSWORD}
-#     ports:
-#       - "${BLUEPRINT_DB_PORT}:3306"
-#     volumes:
-#       - mysql_volume_bp:/var/lib/mysql
-
-#   phpmyadmin:
-#     image: phpmyadmin/phpmyadmin:latest
-#     restart: unless-stopped
-#     environment:
-#       PMA_HOST: mysql_bp
-#       PMA_PORT: 3306
-#       MYSQL_ROOT_PASSWORD: ${BLUEPRINT_DB_ROOT_PASSWORD}
-#     ports:
-#       - "8080:80"
-
-# volumes:
-#   mysql_volume_bp:
-
-
 services:
   mysql_bp:
-    image: mysql:latest
+    image: mysql:8.0.28
     restart: unless-stopped
     environment:
       MYSQL_DATABASE: ${BLUEPRINT_DB_DATABASE}
       MYSQL_USER: ${BLUEPRINT_DB_USERNAME}
       MYSQL_PASSWORD: ${BLUEPRINT_DB_PASSWORD}
       MYSQL_ROOT_PASSWORD: ${BLUEPRINT_DB_ROOT_PASSWORD}
+      MYSQL_INITDB_SKIP_TZINFO: "1"
     ports:
       - "${BLUEPRINT_DB_PORT}:3306"
+    command: --default-authentication-plugin=mysql_native_password
     volumes:
       - mysql_volume_bp:/var/lib/mysql
+
+  redis:
+    image: redis:6.2.5
+    restart: unless-stopped
+    ports:
+      - "6379:6379" 
+
+  redis-commander:
+    image: rediscommander/redis-commander:latest
+    restart: unless-stopped
+    ports:
+      - "8081:8081"
+    environment:
+      - REDIS_HOST=redis
+      - REDIS_PORT=6379 
 
 volumes:
   mysql_volume_bp:
